Fixed the displaing of the footer menu on small screen

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -233,11 +233,7 @@ a {
 
 .footer-top {
     padding: 60px 1rem 40px;
-    grid-template-columns: 36% 1fr;
-
-    @media (min-width: 768px) {
-        grid-template-columns: 100%;
-    }
+    grid-template-columns: 100%;
 
     @media (min-width: 992px) {
         grid-template-columns: 36% 1fr;
@@ -246,9 +242,16 @@ a {
 
 .footer-menu {
     margin-top: 2rem;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
+
+    @media (min-width: 768px) {
+        grid-template-columns: 1fr 1fr;
+    }
 
     @media (min-width: 992px) {
         margin-top: 0;
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
